@@ -7,6 +7,7 @@ dh-make-perl (0.65) UNRELEASED; urgency=low
   * when looking for docs, ignore .svn/ too
   * do not crash when APT's package cache cannot be opened
   * explain reasons when bumping build-dependencies on debhelper/quilt/etc
+  * fix build-system detection when Module::Build::Compat is in play
 
  -- Damyan Ivanov <dmn@debian.org>  Fri, 19 Feb 2010 22:47:26 +0200
 
